--- a/src/auth_rust/Cargo.toml
+++ b/src/auth_rust/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2018"
 
 [dependencies]
 actix-web = "4.0.0-beta.6"
+actix-rt = "2.2.0"
 env_logger = "0.8.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.64"
 sqlx = { version = "0.5.5", features = ["postgres", "runtime-actix-rustls", "uuid" ] }
 dotenv = "0.15.0"
 anyhow = "1.0.40"
