--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -6,8 +6,8 @@ events {
 
 http {
   server {
-  listen 80;
-  server_name frontend;
+    listen 80;
+    server_name frontend;
 
     location /auth {
         # proxy_set_header X-Real-IP $remote_addr;
@@ -18,6 +18,10 @@ http {
         # proxy_set_header Host $http_host;
         # proxy_cache_bypass $http_upgrade;
         # proxy_redirect off;
+    }
+
+    location /agent {
+        proxy_pass http://agentapi:5100;
     }
   }
 }
