--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -14,6 +14,17 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
 
-
+  agentapi:
+    image: ${DOCKER_REGISTRY-}agentapi
+    build:
+      context: .
+      dockerfile: AgentAPI/Dockerfile
+    expose:
+      - "80"
+    ports:
+      - 5100:80
+    volumes:
+      - auth-db:/tmp/data
 volumes:
   auth-db:
+  agent-db:
