--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -23,6 +23,10 @@ http {
     location /agent {
         proxy_pass http://agentapi:5100;
     }
+
+    location /geo {
+        proxy_pass http://geoapi:5200;
+    }
   }
 }
 
