Use correct port in nginx.conf, fix path in docker-compose.yaml

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     image: ${DOCKER_REGISTRY-}geoapi
     build:
       context: .
-      dockerfile: GeoApi/Dockerfile
+      dockerfile: GeoAPI/Dockerfile
     expose:
       - "80"
     ports:
