--- a/src/job/Dockerfile
+++ b/src/job/Dockerfile
@@ -5,4 +5,6 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
+COPY app/* ./
+
 CMD [ "bash", "startup.sh"]
