--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -6,18 +6,15 @@ events {
 
 http {
   server {
-  listen 80;
+  listen 8000;
   server_name frontend;
 
     location /auth {
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-NginX-Proxy true;
         proxy_pass http://auth:5000;
-        # proxy_ssl_session_reuse off;
-        # proxy_set_header Host $http_host;
-        # proxy_cache_bypass $http_upgrade;
-        # proxy_redirect off;
+    }
+    
+    location /job {
+        proxy_pass http://job:5000;
     }
   }
 }
