--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -18,11 +18,11 @@ http {
     }
 
     location /agent {
-        proxy_pass http://agentapi:80;
+        proxy_pass http://agent:80;
     }
 
     location /geo {
-        proxy_pass http://geoapi:80;
+        proxy_pass http://geo:80;
     }
   }
 }
