--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,8 +1,8 @@
 version: '3.4'
 
-services:
-  agentapi:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+# services:
+#   agentapi:
+#     environment:
+#       - ASPNETCORE_ENVIRONMENT=Development
+#     volumes:
+#       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
