--- a/src/GeoAPI/Properties/launchSettings.json
+++ b/src/GeoAPI/Properties/launchSettings.json
@@ -28,7 +28,8 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true
     }
   }
